# SimpleServ

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dependencies.cmake  Features.md  ProjectOptions.cmake  README.md
benchmarks/: CMakeLists.txt  parser_test.cpp  response_test.cpp
cmake/: CPM.cmake  Cache.cmake  CompilerWarnings.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
include/serverlib/: file_manager.hpp  http.hpp  message.hpp  request_handler.hpp  server_manager.hpp  url.hpp
include/serverlib/http/: http_handler.hpp  parser.hpp
include/serverlib/request_processing/: connection.hpp  connection_handler.hpp  tcp_connection.hpp  threadpool.hpp  tls_connection.hpp
include/serverlib/server/: server.hpp  tcp_server.hpp  tcp_server_asio.hpp  tls_server.hpp
include/serverlib/utility/: content_coding.hpp  expected.hpp  lock_free_queue.hpp
include/simpleserv/: debug_flags.hpp  file_manager.hpp  http.hpp  message.hpp  request_handler.hpp  server_manager.hpp  url.hpp
include/simpleserv/http/: headers.hpp  http.hpp  http_handler.hpp  message.hpp  parser.hpp  request_handler.hpp
include/simpleserv/request_processing/: connection.hpp  connection_handler.hpp  tcp_connection.hpp  threadpool.hpp  tls_connection.hpp
include/simpleserv/server/: constants.hpp  handler.hpp  server.hpp  server_manager.hpp  tcp_server.hpp  tcp_server_asio.hpp  tls_server.hpp
include/simpleserv/utility/: brotli_stream_compressor.hpp  content_coding.hpp  file_manager.hpp  lock_free_queue.hpp  logger.hpp  string_parser.hpp  url.hpp
src/: CMakeLists.txt  content_coding.cpp  file_manager.cpp  http.cpp  main.cpp  message.cpp  parser.cpp  request_handler.cpp  server.cpp  std_modules.cmake  uri.cpp  url.cpp
src/http/: parser.cpp
src/include/serverlib/: cache.hpp  content_coding.hpp  debug_flags.hpp  file_manager.hpp  http.hpp  message.hpp  parser.hpp  request_handler.hpp  server.hpp  server_manager.hpp  uri.hpp  url.hpp  user_settings.h
src/include/serverlib/http/: headers.hpp  parser.hpp
src/include/serverlib/request_processing/: connection.hpp  connection_handler.hpp  tcp_connection.hpp  threadpool.hpp  tls_connection.hpp
src/include/serverlib/server/: http_handler.hpp  server.hpp  tcp_server.hpp  tls_server.hpp
src/include/serverlib/socket_layer/: http_handler.hpp  tcp_server.hpp  tls_server.hpp
src/include/serverlib/utility/: content_coding.hpp
src/server/: CMakeLists.txt  main.cpp
src/serverexec/: CMakeLists.txt  main.cpp
src/serverlib/: CMakeLists.txt  content_coding.cpp  file_manager.cpp  message.cpp  request_handler.cpp  url.cpp
src/serverlib/http/: parser.cpp
src/serverlib/socket_layer/: tcp_server_asio.cpp
src/simpleserv/: CMakeLists.txt  content_coding.cpp  file_manager.cpp  request_handler.cpp  url.cpp
src/simpleserv/http/: http_handler.cpp  parser.cpp  request_handler.cpp
src/simpleserv/socket_layer/: tcp_server_asio.cpp
src/simpleserv/utility/: content_coding.cpp  file_manager.cpp  url.cpp
tests/: CMakeLists.txt  parser_test.cpp  url_test.cpp
webdir/: a.html
